# lan-chat

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  HELP.md  README.md  compose.e2e.yaml  compose.yaml  pom.xml  start-tunnel.sh  功能分析-LAN-first-V2.0.md  功能分析.md  可靠消息协议-V1.md  实施状态-LAN-first-V2.0.md  需求分析-LAN-first-V2.0.md  需求分析.md
.github/: release.yml
.github/workflows/: android-build.yml  ci.yml  desktop-build.yml  e2e.yml  release-desktop.yml  server-release.yml
PRD/: 可靠消息协议-V1.md  需求分析.md
PRD/v3/: LANChat_v3.0_PRD.md  README.md
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: attachments.rs  deep_link.rs  discovery.rs  endpoint.rs  lib.rs  lifecycle.rs  main.rs  native_auth.rs  runtime.rs  tray.rs  updater.rs
apps/mobile/: README.md  capacitor.config.ts  package-lock.json  package.json
deploy/: nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
sql/: demo-data.sql  init.sql  migration-v1.1-file-access-cache.sql  migration-v2.0-reliable-messaging.sql  migration-v2.1-security-diagnostics.sql  migration-v2.2-broadcast-permission.sql  migration-v2.2-emergency-broadcast.sql  migration-v2.2-file-transfer.sql  migration-v2.2-temporary-rooms.sql  migration-v2.3-resumable-object-storage.sql  migration-v2.4-broadcast-task-workflow.sql
(+503 files in other folders)
