[package]
name = "lanchat-desktop"
version = "3.0.0"
description = "LANChat desktop client"
authors = ["LANChat contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lanchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
url = "2"
